# Anka

./: .dockerignore  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.mit  README.md  demo-full.sh  demo.sh  docker-compose.tls.yml  docker-compose.yml  docker-demo.sh  docker-entrypoint.sh  run_all.sh
anka/: anka-node.Caddyfile  anka-node.nginx.conf  docker-demo.sh  join.sh  mesh5.sh  mesh_convergence_test.py  operator.json  setup.py
anka/demos/: accident_flow.py  accident_flow_dynamic.py  accident_followup.py  clinical_trial_flow.py  research_verification_flow.py
anka/src/: adversarial_sim.fard  agent.fard  archive.fard  archive_seg.fard  bay2_http_store.fard  bay2_store.fard  canonical.fard  capability_store.fard  challenge.fard  checkpoint.fard  claim.fard  claim_set.fard  claim_space.fard  convergence.fard  dashboard.fard  demo.fard  dialer.fard  discovery.fard  dispute_resolution.fard  economy.fard  exec_claim.fard  (+49 more)
anka_sdk/: pyproject.toml
anka_sdk/anka/: __init__.py  agent.py  client.py  exceptions.py  exec_claim.py  verifier.py
anka_sdk/anka_client.egg-info/: PKG-INFO  SOURCES.txt
anka_sdk/examples/: alice_bob_exec_claim.py
anka_sdk/schema/: exec_claim_v0_1_0.json
anka_sdk/tests/: test_exec_claim_schema.py  test_verifier.py
deploy/: README.md  anka-node.service  caddy.conf  nginx.conf
receipts/: sha256_c791591d9ed779226b67cc11dd1ba533c526a1934e8373909fa4957726504acf.json  sha256_cee017f60b23de56900d5c85e60d2ce49a4e72609da8a3e5f57adb550cbbfb70.json  sha256_e164b81ef0d7094af450a7288bc1fb4efc93d5d527b629f07e102a1e399e4059.json
(+89 files in other folders)
