[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anka-client"
version = "0.1.0"
description = "Python client SDK for ANKA nodes"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Maulud Sadiq" }
]
keywords = ["anka", "ai", "agents", "claims", "gossip", "provenance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
]

[tool.setuptools]
packages = ["anka"]
